[package]
name = "aquinas"
version = "0.1.1"
license = "MPL-2.0"
readme = "README.md"
description = "A simple command line media player. (Like cmus, but simpler.)"
categories = ["multimedia", "multimedia::audio"]
keywords = ["audio", "multimedia", "media", "mediaplayer", "music"]
authors = ["Dakota Brink <git@kota.is>"]
repository = "https://github.com/codabrink/aquinas"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1"
dirs = "5"
tui = "0.19"
crossterm = "0.26"
crossbeam-channel = "0.5"
hashbrown = "0.13"
parking_lot = "0.12"
toml = "0.7"
serde = "1"
serde_derive = "1"
souvlaki = "0.6"
winit = "0.28"


# symphonia
symphonia = { version = "0.5", optional = true, features = ["mp3"] }
cpal = { version = "0.15", optional = true }
rb = { version = "0.4", optional = true }

# metadata
audiotags = { version = "0.4", optional = true }    # mp3, flac
opus_headers = { version = "0.1", optional = true } # opus
lewton = { version = "0.10", optional = true }      # ogg

gstreamer = { version = "0.20", optional = true }
gstreamer-player = { version = "0.20", optional = true }
gstreamer-pbutils = { version = "0.20", optional = true }

[features]
default = ["symphonia_backend"]
gstreamer_backend = ["gstreamer", "gstreamer-player", "gstreamer-pbutils"]
symphonia_backend = ["symphonia", "cpal", "rb"]
# need to optimize this feature before enabling it by default
metadata = ["audiotags", "opus_headers", "lewton"]
